# c8int

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.org  chip8.c  chip8.h  emu.c  test
include/: chip8.h  disp.h
src/: :w  bincreator.sh  c8int.c  chip8.c  disp.c  emu.c
test/: chip8_test.txt
